--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "electron-packager": "^15.1.0"
   },
   "dependencies": {
+    "bignumber.js": "^9.0.1",
+    "electron-log": "^4.3.2",
     "node-notifier": "^8.0.0",
     "sweetalert": "^2.1.2"
   }
